# pernix-benchmark

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSES.md  README.md
memory/: CMakeLists.txt
memory/include/membench/: benchmark.h  benchmark_stats.h  cpu.h  memory.h  results_json.h  utils.h
memory/src/: benchmark.cpp  benchmark_stats.cpp  cpu.cpp  main.cpp  results_json.cpp
memory/src/kernel/copy/: copy.cpp  copy_avx2.cpp  copy_avx512.cpp  copy_neon.cpp  copy_sse.cpp  copy_sve.cpp  copy_validator.cpp
memory/src/kernel/daxpy/: daxpy.cpp  daxpy_avx2.cpp  daxpy_avx512.cpp  daxpy_neon.cpp  daxpy_sse.cpp  daxpy_sve.cpp  daxpy_validator.cpp
memory/src/kernel/ddot/: ddot.cpp  ddot_avx2.cpp  ddot_avx512.cpp  ddot_neon.cpp  ddot_sse.cpp  ddot_sve.cpp  ddot_validator.cpp
memory/src/kernel/load/: load.cpp  load_avx2.cpp  load_avx512.cpp  load_neon.cpp  load_sse.cpp  load_sve.cpp  load_validator.cpp
memory/src/kernel/store/: store.cpp  store_avx2.cpp  store_avx512.cpp  store_neon.cpp  store_sse.cpp  store_sve.cpp  store_validator.cpp
memory/src/kernel/triad/: triad.cpp  triad_avx2.cpp  triad_avx512.cpp  triad_neon.cpp  triad_sse.cpp  triad_sve.cpp  triad_validator.cpp
memory/src/kernel/update/: update.cpp  update_avx2.cpp  update_avx512.cpp  update_neon.cpp  update_sse.cpp  update_sve.cpp  update_validator.cpp
scripts/: runBenchmarks.sh  runMemoryBenchmarks.sh  transformResults.sh
scripts/internal/: transformResults.py
src/: CMakeLists.txt  main.cpp
src/cp2k/: cp2k_benchmarks.cpp  cp2k_benchmarks.f90  test.f90
src/pernix/avx2/: avx2_compression.cpp  avx2_decompression.cpp
src/pernix/avx512vbmi/: avx512vbmi_compression.cpp  avx512vbmi_decompression.cpp
src/pernix/bmi2/: bmi2_compression.cpp  bmi2_decompression.cpp
src/pernix/fallback/: fallback_compression.cpp  fallback_decompression.cpp
src/pernix/include/: benchmark.h
